--- a/res.qrc
+++ b/res.qrc
@@ -10,7 +10,9 @@
         <file>res/check.png</file>
         <file>res/coloring.jpg</file>
         <file>res/comuser.png</file>
+        <file>res/douyinLogo.png</file>
         <file>res/fire.png</file>
+        <file>res/github.png</file>
         <file>res/google.png</file>
         <file>res/hot.png</file>
         <file>res/lockLogo.png</file>
@@ -23,6 +25,7 @@
         <file>res/Newlast.png</file>
         <file>res/newsAPP.png</file>
         <file>res/newsdetail-test.jpg</file>
+        <file>res/news-pic.jpg</file>
         <file>res/news-pic2.png</file>
         <file>res/number1.png</file>
         <file>res/number2.png</file>
