--- a/timetable.ui
+++ b/timetable.ui
@@ -85,6 +85,19 @@
     <string>返回登录</string>
    </property>
   </widget>
+  <widget class="QPushButton" name="refresh">
+   <property name="geometry">
+    <rect>
+     <x>730</x>
+     <y>40</y>
+     <width>75</width>
+     <height>23</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>刷新</string>
+   </property>
+  </widget>
  </widget>
  <resources/>
  <connections/>
