--- a/res.qrc
+++ b/res.qrc
@@ -4,5 +4,30 @@
         <file>res/auditor.png</file>
         <file>res/loginBtn.png</file>
         <file>res/return.png</file>
+        <file>res/1.png</file>
+        <file>res/2.png</file>
+        <file>res/3.png</file>
+        <file>res/4.png</file>
+        <file>res/5.png</file>
+        <file>res/6.png</file>
+        <file>res/account-circle-line.png</file>
+        <file>res/address-card.png</file>
+        <file>res/bookmark.png</file>
+        <file>res/calendar1.png</file>
+        <file>res/check-circle.png</file>
+        <file>res/close-circle.png</file>
+        <file>res/edit.png</file>
+        <file>res/edit-box-line.png</file>
+        <file>res/eye-line.png</file>
+        <file>res/image.png</file>
+        <file>res/left-circle.png</file>
+        <file>res/lock.png</file>
+        <file>res/minus-circle.png</file>
+        <file>res/plus-circle.png</file>
+        <file>res/save.png</file>
+        <file>res/search.png</file>
+        <file>res/share-circle-line.png</file>
+        <file>res/stop.png</file>
+        <file>res/sync.png</file>
     </qresource>
 </RCC>
