--- a/changepassword.ui
+++ b/changepassword.ui
@@ -1,20 +1,46 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
  <class>ChangePassword</class>
- <widget class="QWidget" name="ChangePassword">
+ <widget class="QMainWindow" name="ChangePassword">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>841</width>
-    <height>607</height>
+    <width>753</width>
+    <height>627</height>
    </rect>
   </property>
   <property name="windowTitle">
-   <string>QWidget</string>
+   <string>MainWindow</string>
   </property>
   <widget class="QWidget" name="centralwidget">
    <layout class="QGridLayout" name="gridLayout_2">
+    <item row="0" column="1">
+     <spacer name="verticalSpacer_2">
+      <property name="orientation">
+       <enum>Qt::Vertical</enum>
+      </property>
+      <property name="sizeHint" stdset="0">
+       <size>
+        <width>20</width>
+        <height>189</height>
+       </size>
+      </property>
+     </spacer>
+    </item>
+    <item row="1" column="0">
+     <spacer name="horizontalSpacer">
+      <property name="orientation">
+       <enum>Qt::Horizontal</enum>
+      </property>
+      <property name="sizeHint" stdset="0">
+       <size>
+        <width>237</width>
+        <height>20</height>
+       </size>
+      </property>
+     </spacer>
+    </item>
     <item row="1" column="1">
      <layout class="QVBoxLayout" name="verticalLayout_2">
       <item>
@@ -69,7 +95,6 @@
              <widget class="QLabel" name="label_6">
               <property name="font">
                <font>
-                <weight>75</weight>
                 <bold>true</bold>
                </font>
               </property>
@@ -114,27 +139,14 @@
       </item>
      </layout>
     </item>
-    <item row="0" column="1">
-     <spacer name="verticalSpacer_2">
-      <property name="orientation">
-       <enum>Qt::Vertical</enum>
-      </property>
-      <property name="sizeHint" stdset="0">
-       <size>
-        <width>20</width>
-        <height>138</height>
-       </size>
-      </property>
-     </spacer>
-    </item>
     <item row="1" column="2">
-     <spacer name="horizontalSpacer">
+     <spacer name="horizontalSpacer_2">
       <property name="orientation">
        <enum>Qt::Horizontal</enum>
       </property>
       <property name="sizeHint" stdset="0">
        <size>
-        <width>214</width>
+        <width>237</width>
         <height>20</height>
        </size>
       </property>
@@ -148,30 +160,10 @@
       <property name="sizeHint" stdset="0">
        <size>
         <width>20</width>
-        <height>138</height>
+        <height>188</height>
        </size>
       </property>
      </spacer>
-    </item>
-    <item row="1" column="0">
-     <spacer name="horizontalSpacer_2">
-      <property name="orientation">
-       <enum>Qt::Horizontal</enum>
-      </property>
-      <property name="sizeHint" stdset="0">
-       <size>
-        <width>215</width>
-        <height>20</height>
-       </size>
-      </property>
-     </spacer>
-    </item>
-    <item row="0" column="2">
-     <widget class="QPushButton" name="pushButton_3">
-      <property name="text">
-       <string>返回</string>
-      </property>
-     </widget>
     </item>
    </layout>
   </widget>
@@ -180,8 +172,8 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>841</width>
-     <height>30</height>
+     <width>753</width>
+     <height>21</height>
     </rect>
    </property>
   </widget>
