--- a/t_mainwindow.ui
+++ b/t_mainwindow.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>835</width>
-    <height>666</height>
+    <width>894</width>
+    <height>848</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -23,123 +23,7 @@
 }</string>
       </property>
       <layout class="QGridLayout" name="gridLayout">
-       <item row="5" column="0">
-        <widget class="QToolButton" name="toolButton_6">
-         <property name="styleSheet">
-          <string notr="true">/* 默认 */
-QToolButton{   
-	border-top: 3px outset transparent;           /* 上边框宽度3像素、突出显示、颜色为透明 */
-	border-bottom: 7px outset transparent;
-	border-right: 3px outset transparent;
-	border-left: 3px outset transparent;
-    min-width: 80px;                            /* 控件最小宽度 */
-    min-height: 80px;
-	background-color: rgb(228, 228, 228);
-}
-
-/* 鼠标悬停 */
-QToolButton:hover{
-	background-color: rgb(205, 205, 205);
-}
-
-/* 点击和按下 */
-QToolButton:pressed,QToolButton:checked{
-	border-left: 3px outset rgb(93, 95, 97);  /* 左边框宽度3像素、突出显示、颜色为深深灰 */
-	background-color: rgb(246, 246, 246);	
-}
-
-QPushButton:default {
-    border-color: navy; /* make the default button prominent */
-}
-
-
-QWidget{
-	background-color: rgb(228, 228, 228);  /* 设置背景色为灰色 */
-}</string>
-         </property>
-         <property name="text">
-          <string>退出系统</string>
-         </property>
-         <property name="icon">
-          <iconset>
-           <normaloff>:/res/share-circle-line.png</normaloff>:/res/share-circle-line.png</iconset>
-         </property>
-         <property name="iconSize">
-          <size>
-           <width>48</width>
-           <height>48</height>
-          </size>
-         </property>
-         <property name="checkable">
-          <bool>true</bool>
-         </property>
-         <property name="autoExclusive">
-          <bool>true</bool>
-         </property>
-         <property name="toolButtonStyle">
-          <enum>Qt::ToolButtonTextUnderIcon</enum>
-         </property>
-        </widget>
-       </item>
-       <item row="0" column="0" colspan="2">
-        <widget class="QToolButton" name="toolButton">
-         <property name="styleSheet">
-          <string notr="true">/* 默认 */
-QToolButton{   
-	border-top: 3px outset transparent;           /* 上边框宽度3像素、突出显示、颜色为透明 */
-	border-bottom: 7px outset transparent;
-	border-right: 3px outset transparent;
-	border-left: 3px outset transparent;
-    min-width: 80px;                            /* 控件最小宽度 */
-    min-height: 80px;
-	background-color: rgb(228, 228, 228);
-}
-
-/* 鼠标悬停 */
-QToolButton:hover{
-	background-color: rgb(205, 205, 205);
-}
-
-/* 点击和按下 */
-QToolButton:pressed,QToolButton:checked{
-	border-left: 3px outset rgb(93, 95, 97);  /* 左边框宽度3像素、突出显示、颜色为深深灰 */
-	background-color: rgb(246, 246, 246);	
-}
-
-QPushButton:default {
-    border-color: navy; /* make the default button prominent */
-}
-
-
-QWidget{
-	background-color: rgb(228, 228, 228);  /* 设置背景色为灰色 */
-}</string>
-         </property>
-         <property name="text">
-          <string>个人信息</string>
-         </property>
-         <property name="icon">
-          <iconset>
-           <normaloff>:/res/account-circle-line.png</normaloff>:/res/account-circle-line.png</iconset>
-         </property>
-         <property name="iconSize">
-          <size>
-           <width>48</width>
-           <height>48</height>
-          </size>
-         </property>
-         <property name="checkable">
-          <bool>true</bool>
-         </property>
-         <property name="autoExclusive">
-          <bool>true</bool>
-         </property>
-         <property name="toolButtonStyle">
-          <enum>Qt::ToolButtonTextUnderIcon</enum>
-         </property>
-        </widget>
-       </item>
-       <item row="1" column="0" colspan="2">
+       <item row="1" column="0">
         <widget class="QToolButton" name="toolButton_2">
          <property name="styleSheet">
           <string notr="true">/* 默认 */
@@ -167,134 +51,10 @@ QToolButton:pressed,QToolButton:checked{
 QPushButton:default {
     border-color: navy; /* make the default button prominent */
 }
-
-
-QWidget{
-	background-color: rgb(228, 228, 228);  /* 设置背景色为灰色 */
-}</string>
+</string>
          </property>
          <property name="text">
           <string>任课信息</string>
-         </property>
-         <property name="icon">
-          <iconset>
-           <normaloff>:/res/5.png</normaloff>:/res/5.png</iconset>
-         </property>
-         <property name="iconSize">
-          <size>
-           <width>48</width>
-           <height>48</height>
-          </size>
-         </property>
-         <property name="checkable">
-          <bool>true</bool>
-         </property>
-         <property name="autoExclusive">
-          <bool>true</bool>
-         </property>
-         <property name="toolButtonStyle">
-          <enum>Qt::ToolButtonTextUnderIcon</enum>
-         </property>
-        </widget>
-       </item>
-       <item row="4" column="0" colspan="2">
-        <widget class="QToolButton" name="toolButton_5">
-         <property name="styleSheet">
-          <string notr="true">/* 默认 */
-QToolButton{   
-	border-top: 3px outset transparent;           /* 上边框宽度3像素、突出显示、颜色为透明 */
-	border-bottom: 7px outset transparent;
-	border-right: 3px outset transparent;
-	border-left: 3px outset transparent;
-    min-width: 80px;                            /* 控件最小宽度 */
-    min-height: 80px;
-	background-color: rgb(228, 228, 228);
-}
-
-/* 鼠标悬停 */
-QToolButton:hover{
-	background-color: rgb(205, 205, 205);
-}
-
-/* 点击和按下 */
-QToolButton:pressed,QToolButton:checked{
-	border-left: 3px outset rgb(93, 95, 97);  /* 左边框宽度3像素、突出显示、颜色为深深灰 */
-	background-color: rgb(246, 246, 246);	
-}
-
-QPushButton:default {
-    border-color: navy; /* make the default button prominent */
-}
-
-
-QWidget{
-	background-color: rgb(228, 228, 228);  /* 设置背景色为灰色 */
-}</string>
-         </property>
-         <property name="text">
-          <string>修改密码</string>
-         </property>
-         <property name="icon">
-          <iconset>
-           <normaloff>:/res/lock.png</normaloff>:/res/lock.png</iconset>
-         </property>
-         <property name="iconSize">
-          <size>
-           <width>48</width>
-           <height>48</height>
-          </size>
-         </property>
-         <property name="checkable">
-          <bool>true</bool>
-         </property>
-         <property name="autoExclusive">
-          <bool>true</bool>
-         </property>
-         <property name="toolButtonStyle">
-          <enum>Qt::ToolButtonTextUnderIcon</enum>
-         </property>
-        </widget>
-       </item>
-       <item row="2" column="0">
-        <widget class="QToolButton" name="toolButton_3">
-         <property name="styleSheet">
-          <string notr="true">/* 默认 */
-QToolButton{   
-	border-top: 3px outset transparent;           /* 上边框宽度3像素、突出显示、颜色为透明 */
-	border-bottom: 7px outset transparent;
-	border-right: 3px outset transparent;
-	border-left: 3px outset transparent;
-    min-width: 80px;                            /* 控件最小宽度 */
-    min-height: 80px;
-	background-color: rgb(228, 228, 228);
-}
-
-/* 鼠标悬停 */
-QToolButton:hover{
-	background-color: rgb(205, 205, 205);
-}
-
-/* 点击和按下 */
-QToolButton:pressed,QToolButton:checked{
-	border-left: 3px outset rgb(93, 95, 97);  /* 左边框宽度3像素、突出显示、颜色为深深灰 */
-	background-color: rgb(246, 246, 246);	
-}
-
-QPushButton:default {
-    border-color: navy; /* make the default button prominent */
-}
-
-
-QWidget{
-	background-color: rgb(228, 228, 228);  /* 设置背景色为灰色 */
-}</string>
-         </property>
-         <property name="text">
-          <string>课程管理</string>
-         </property>
-         <property name="icon">
-          <iconset>
-           <normaloff>:/res/3.png</normaloff>:/res/3.png</iconset>
          </property>
          <property name="iconSize">
           <size>
@@ -341,18 +101,10 @@ QToolButton:pressed,QToolButton:checked{
 QPushButton:default {
     border-color: navy; /* make the default button prominent */
 }
-
-
-QWidget{
-	background-color: rgb(228, 228, 228);  /* 设置背景色为灰色 */
-}</string>
+</string>
          </property>
          <property name="text">
           <string>学生管理</string>
-         </property>
-         <property name="icon">
-          <iconset>
-           <normaloff>:/res/2.png</normaloff>:/res/2.png</iconset>
          </property>
          <property name="iconSize">
           <size>
@@ -371,7 +123,207 @@ QWidget{
          </property>
         </widget>
        </item>
-       <item row="0" column="2" rowspan="6">
+       <item row="4" column="0">
+        <widget class="QToolButton" name="toolButton_5">
+         <property name="styleSheet">
+          <string notr="true">/* 默认 */
+QToolButton{   
+	border-top: 3px outset transparent;           /* 上边框宽度3像素、突出显示、颜色为透明 */
+	border-bottom: 7px outset transparent;
+	border-right: 3px outset transparent;
+	border-left: 3px outset transparent;
+    min-width: 80px;                            /* 控件最小宽度 */
+    min-height: 80px;
+	background-color: rgb(228, 228, 228);
+}
+
+/* 鼠标悬停 */
+QToolButton:hover{
+	background-color: rgb(205, 205, 205);
+}
+
+/* 点击和按下 */
+QToolButton:pressed,QToolButton:checked{
+	border-left: 3px outset rgb(93, 95, 97);  /* 左边框宽度3像素、突出显示、颜色为深深灰 */
+	background-color: rgb(246, 246, 246);	
+}
+
+QPushButton:default {
+    border-color: navy; /* make the default button prominent */
+}
+</string>
+         </property>
+         <property name="text">
+          <string>修改密码</string>
+         </property>
+         <property name="iconSize">
+          <size>
+           <width>48</width>
+           <height>48</height>
+          </size>
+         </property>
+         <property name="checkable">
+          <bool>true</bool>
+         </property>
+         <property name="autoExclusive">
+          <bool>true</bool>
+         </property>
+         <property name="toolButtonStyle">
+          <enum>Qt::ToolButtonTextUnderIcon</enum>
+         </property>
+        </widget>
+       </item>
+       <item row="0" column="0">
+        <widget class="QToolButton" name="toolButton">
+         <property name="styleSheet">
+          <string notr="true">/* 默认 */
+QToolButton{   
+	border-top: 3px outset transparent;           /* 上边框宽度3像素、突出显示、颜色为透明 */
+	border-bottom: 7px outset transparent;
+	border-right: 3px outset transparent;
+	border-left: 3px outset transparent;
+    min-width: 80px;                            /* 控件最小宽度 */
+    min-height: 80px;
+	background-color: rgb(228, 228, 228);
+}
+
+/* 鼠标悬停 */
+QToolButton:hover{
+	background-color: rgb(205, 205, 205);
+}
+
+/* 点击和按下 */
+QToolButton:pressed,QToolButton:checked{
+	border-left: 3px outset rgb(93, 95, 97);  /* 左边框宽度3像素、突出显示、颜色为深深灰 */
+	background-color: rgb(246, 246, 246);	
+}
+
+QPushButton:default {
+    border-color: navy; /* make the default button prominent */
+}
+</string>
+         </property>
+         <property name="text">
+          <string>个人信息</string>
+         </property>
+         <property name="iconSize">
+          <size>
+           <width>48</width>
+           <height>48</height>
+          </size>
+         </property>
+         <property name="checkable">
+          <bool>true</bool>
+         </property>
+         <property name="autoExclusive">
+          <bool>true</bool>
+         </property>
+         <property name="toolButtonStyle">
+          <enum>Qt::ToolButtonTextUnderIcon</enum>
+         </property>
+        </widget>
+       </item>
+       <item row="5" column="0">
+        <widget class="QToolButton" name="toolButton_6">
+         <property name="styleSheet">
+          <string notr="true">/* 默认 */
+QToolButton{   
+	border-top: 3px outset transparent;           /* 上边框宽度3像素、突出显示、颜色为透明 */
+	border-bottom: 7px outset transparent;
+	border-right: 3px outset transparent;
+	border-left: 3px outset transparent;
+    min-width: 80px;                            /* 控件最小宽度 */
+    min-height: 80px;
+	background-color: rgb(228, 228, 228);
+}
+
+/* 鼠标悬停 */
+QToolButton:hover{
+	background-color: rgb(205, 205, 205);
+}
+
+/* 点击和按下 */
+QToolButton:pressed,QToolButton:checked{
+	border-left: 3px outset rgb(93, 95, 97);  /* 左边框宽度3像素、突出显示、颜色为深深灰 */
+	background-color: rgb(246, 246, 246);	
+}
+
+QPushButton:default {
+    border-color: navy; /* make the default button prominent */
+}
+</string>
+         </property>
+         <property name="text">
+          <string>退出系统</string>
+         </property>
+         <property name="iconSize">
+          <size>
+           <width>48</width>
+           <height>48</height>
+          </size>
+         </property>
+         <property name="checkable">
+          <bool>true</bool>
+         </property>
+         <property name="autoExclusive">
+          <bool>true</bool>
+         </property>
+         <property name="toolButtonStyle">
+          <enum>Qt::ToolButtonTextUnderIcon</enum>
+         </property>
+        </widget>
+       </item>
+       <item row="2" column="0">
+        <widget class="QToolButton" name="toolButton_3">
+         <property name="styleSheet">
+          <string notr="true">/* 默认 */
+QToolButton{   
+	border-top: 3px outset transparent;           /* 上边框宽度3像素、突出显示、颜色为透明 */
+	border-bottom: 7px outset transparent;
+	border-right: 3px outset transparent;
+	border-left: 3px outset transparent;
+    min-width: 80px;                            /* 控件最小宽度 */
+    min-height: 80px;
+	background-color: rgb(228, 228, 228);
+}
+
+/* 鼠标悬停 */
+QToolButton:hover{
+	background-color: rgb(205, 205, 205);
+}
+
+/* 点击和按下 */
+QToolButton:pressed,QToolButton:checked{
+	border-left: 3px outset rgb(93, 95, 97);  /* 左边框宽度3像素、突出显示、颜色为深深灰 */
+	background-color: rgb(246, 246, 246);	
+}
+
+QPushButton:default {
+    border-color: navy; /* make the default button prominent */
+}
+</string>
+         </property>
+         <property name="text">
+          <string>课程管理</string>
+         </property>
+         <property name="iconSize">
+          <size>
+           <width>48</width>
+           <height>48</height>
+          </size>
+         </property>
+         <property name="checkable">
+          <bool>true</bool>
+         </property>
+         <property name="autoExclusive">
+          <bool>true</bool>
+         </property>
+         <property name="toolButtonStyle">
+          <enum>Qt::ToolButtonTextUnderIcon</enum>
+         </property>
+        </widget>
+       </item>
+       <item row="0" column="1" rowspan="6">
         <widget class="QStackedWidget" name="stackedWidget"/>
        </item>
       </layout>
@@ -384,8 +336,8 @@ QWidget{
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>835</width>
-     <height>21</height>
+     <width>894</width>
+     <height>30</height>
     </rect>
    </property>
   </widget>
