--- a/widget.ui
+++ b/widget.ui
@@ -127,7 +127,7 @@
 }</string>
     </property>
     <property name="text">
-     <string/>
+     <string>tea</string>
     </property>
     <property name="placeholderText">
      <string>请输入账号</string>
@@ -156,7 +156,7 @@
 }</string>
     </property>
     <property name="text">
-     <string/>
+     <string>123</string>
     </property>
     <property name="echoMode">
      <enum>QLineEdit::Password</enum>
